feat: add TLP support of StoneDB (#857)
* fix: Tianmu engine does not support fulltext index.

* feat: add expectedErrors for all generator

* refactor: remove unused expected errors

* feat: add expectedErrors for all generator

* refactor: remove unused expected errors

* feat: init support of TLP for StoneDB

* fix: mvn test errors

* feat: add CI

* feat: add CI

* feat: add CI

* fix: remove unsupported operator

* fix: change string generator strategy

* feat: add expected errors

* fix: binary type should have a max length

* fix: mvn format

* fix: MySQL 5.7 does not support double, change to decimal

* fix: natural join type

* fix: only one alter option one time

* feat: add expected errors

* git: manually revert commits

* git: manually revert commits

* fix: use latest version and set tianmu_insert_delayed=0

* rename: rename oracle